--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     compile 'com.android.support:support-v4:25.1.1'
-    testCompile 'junit:junit:4.12'
-    compile "com.android.support:support-core-utils:25.1.1"
+    compile 'com.android.support:support-core-utils:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.google.apis:google-api-services-customsearch:v1-rev53-1.22.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.google.api-client:google-api-client:1.22.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0'
 }
