--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ dependencies {
     compile 'com.android.support:support-v4:25.2.+'
     //noinspection GradleDynamicVersion
     compile 'com.android.support:support-core-utils:25.2.+'
+    //noinspection GradleDynamicVersion
+    compile 'com.android.support:cardview-v7:25.2.+'
+    //noinspection GradleDynamicVersion
+    compile 'com.android.support:recyclerview-v7:25.2.+'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.google.api-client:google-api-client:1.22.0'
     testCompile 'junit:junit:4.12'
